--- a/prj3_commute.ipynb
+++ b/prj3_commute.ipynb
@@ -3474,7 +3474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['역명'] = data.apply(lambda x : '2덕천' if (x.역번호=='233') & (x.역명=='덕천') else x.역명  , axis=1 )\n"
+    "data['역명'] = data.apply(lambda x : '2덕천' if (x.역번호=='233') & (x.역명=='덕천') else x.역명  , axis=1 )"
    ]
   },
   {
@@ -6256,7 +6256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
